# mlflow-descope-auth

./: .env.example  .gitignore  .gitleaksignore  .mise.toml  .pre-commit-config.yaml  .tool-versions  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PLAN.md  README.md  mise.toml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release-please.yml
archive/: app.py  auth_routes.py  middleware.py
docs/: QUICKSTART.md
examples/: basic_usage.py  custom_config.py  docker-compose.postgres.yml  docker-compose.yml
mlflow_descope_auth/: __init__.py  app.py  auth_provider.py  auth_routes.py  client.py  config.py  context_provider.py  header_provider.py  server.py  store.py  wsgi_middleware.py
mlflow_descope_auth/templates/: login.html
tests/: conftest.py  test_auth_routes.py  test_client.py  test_config.py  test_plugin_integration.py  test_server_auth.py  test_store.py
